Contrast fix for second assignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,5 +102,4 @@ h1 {
 footer p {
     text-align: right;
     color: #FCB50Fff;
-    background-color: rgb(99, 124, 124);
 }
